@@ -22,42 +22,30 @@ import scala.collection.mutable
 import org.apache.commons.lang3.{JavaVersion, SystemUtils}
 
 import org.apache.spark.SparkConf
-import org.apache.spark.internal.config.{DRIVER_JAVA_OPTIONS, EXECUTOR_JAVA_OPTIONS, OptionalConfigEntry}
+import org.apache.spark.internal.config.{ConfigEntry, DRIVER_JAVA_MODULE_OPTIONS, DRIVER_JAVA_OPTIONS, EXECUTOR_JAVA_MODULE_OPTIONS, EXECUTOR_JAVA_OPTIONS, OptionalConfigEntry}
+import org.apache.spark.launcher.JavaModuleOptions
 
 object JavaModuleUtils {
 
-  private val javaModuleOptions = Set(
-    "-XX:+IgnoreUnrecognizedVMOptions",
-    "--add-opens=java.base/java.lang=ALL-UNNAMED",
-    "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
-    "--add-opens=java.base/java.io=ALL-UNNAMED",
-    "--add-opens=java.base/java.net=ALL-UNNAMED",
-    "--add-opens=java.base/java.nio=ALL-UNNAMED",
-    "--add-opens=java.base/java.util=ALL-UNNAMED",
-    "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
-    "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
-    "--add-opens=java.base/sun.nio.cs=ALL-UNNAMED",
-    "--add-opens=java.base/sun.security.action=ALL-UNNAMED",
-    "--add-opens=java.base/sun.util.calendar=ALL-UNNAMED")
-
   def isJavaVersionAtLeast17: Boolean = SystemUtils.isJavaVersionAtLeast(JavaVersion.JAVA_17)
 
-  def defaultModuleOptions(): String = javaModuleOptions.mkString(" ", " ", " ")
+  def defaultModuleOptions(): String =
+    JavaModuleOptions.DEFAULT_MODULE_OPTIONS.mkString(" ", " ", " ")
 
-  def supplementJava17ModuleOptsIfNeeded(conf: SparkConf): Unit = {
+  def supplementJavaModuleOptions(conf: SparkConf): Unit = {
 
-    def supplementModuleOpts(configEntry: OptionalConfigEntry[String]): Unit = {
-      val v = conf.get(configEntry) match {
-        case Some(opts) => JavaModuleUtils.defaultModuleOptions() + opts
-        case None => JavaModuleUtils.defaultModuleOptions()
+    def supplementModuleOpts(
+        targetEntry: OptionalConfigEntry[String],
+        sourceEntry: ConfigEntry[String]): Unit = {
+      val v = conf.get(targetEntry) match {
+        case Some(opts) => conf.get(sourceEntry) + opts
+        case None => conf.get(sourceEntry)
       }
-      conf.set(configEntry.key, v)
+      conf.set(targetEntry.key, v)
     }
 
-    if (Utils.isTesting && isJavaVersionAtLeast17) {
-      supplementModuleOpts(DRIVER_JAVA_OPTIONS)
-      supplementModuleOpts(EXECUTOR_JAVA_OPTIONS)
-    }
+    supplementModuleOpts(DRIVER_JAVA_OPTIONS, DRIVER_JAVA_MODULE_OPTIONS)
+    supplementModuleOpts(EXECUTOR_JAVA_OPTIONS, EXECUTOR_JAVA_MODULE_OPTIONS)
   }
 
   def supplementJava17ModuleOptsIfNeeded(args: Seq[String]): Seq[String] = {
